@@ -7,10 +7,9 @@ import org.springframework.cache.caffeine.CaffeineCache;
 import org.springframework.cache.support.SimpleCacheManager;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.Primary;
 
 import java.time.Duration;
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableCaching
@@ -18,7 +17,7 @@ public class CacheConfig {
 
     @Bean
     public CaffeineCache caffeineCacheConfig() {
-        return new CaffeineCache("customerCache", Caffeine.newBuilder()
+        return new CaffeineCache("quoteCache", Caffeine.newBuilder()
                 .expireAfterWrite(Duration.ofMinutes(10))
                 .initialCapacity(1)
                 .maximumSize(2000)
@@ -26,10 +25,9 @@ public class CacheConfig {
     }
 
     @Bean
-    @Primary
     public CacheManager caffeineCacheManager(CaffeineCache caffeineCache) {
         SimpleCacheManager manager = new SimpleCacheManager();
-        manager.setCaches(Collections.singletonList(caffeineCache));
+        manager.setCaches(List.of(caffeineCache));
         return manager;
     }
 }
